# Ampelgrader

./: .gitignore  .gitlab-ci.yml  Dockerfile  DockerfileLanding  DockerfileWorker  LICENSE  Readme.md  datamodel.md  docker-compose-dev.yaml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  start.sh
grader/: admin.py  auth.py  forms.py  models.py  settings.py  urls.py  views.py
grader/management/commands/: notify.py  set_limits.py
grader/middleware/auto_logout/: middleware.py
grader/migrations/: 0001_initial.py  0002_alter_cell_table_alter_exercise_table_and_more.py  0003_gradingprocess_notified.py  0004_alter_cell_max_score_alter_grading_points.py  0005_add_notebook_data.py  0006_add_last_updated_and_released_in_exercise.py  0007_remove_flag_add_uploaded_date_notebook.py  0008_keycloaksession.py  0009_notebook_assets.py  0010_dailycontingent_alter_studentnotebook_process.py  0011_notebook_release_data.py  0012_dailylimit_delete_dailycontingent.py
grader/static/grader/: common.css  errorstyle.css  styles.css
grader/templates/: 404.html  maintenance.html
grader/templates/grader/: autocreation.html  autocreation_result.html  base.html  (+11 more)
landing_page/: DockerfileLanding  index.js  package.json
landing_page/src/: landing_page.html  landing_page.js  retrieve_services.sh  styles.css
nbblackbox/: asgi.py  settings.py  urls.py  wsgi.py
nbblackbox_common/: pyproject.toml
nbblackbox_common/nbblackbox_common/: __init__.py
nbworker/: Readme.md  pyproject.toml  test_tool.py
nbworker/nbworker/: __init__.py
nbworker/source/UB-1/: UB-1.ipynb
(+7 files in other folders)
