[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nbworker"
version = "0.1"
dependencies = [
    "nbgrader==0.9.1",
    "psycopg2-binary==2.9",
]
requires-python = ">= 3.10"

[tool.setuptools]
packages = ["nbworker"]

[project.scripts]
nbworker = "nbworker:cmd"
